--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>HIMA BISA Marketplace - Jasa & Produk</title>
+<title>HIMABIDA Store - Jasa & Produk</title>
 <style>
   * {
     margin: 0;
@@ -501,7 +501,7 @@
     <header>
       <div class="logo">
         <div class="logo-icon">🛍️</div>
-        <div class="logo-text">HIMA BISA</div>
+        <div class="logo-text">HIMABIDA STORE</div>
       </div>
       <div class="tagline">Marketplace Anggota HIMA BISA</div>
     </header>
