--- a/index.html
+++ b/index.html
@@ -1220,12 +1220,13 @@
          media: [
         { 
           type: 'image', 
-          url: 'https://images.unsplash.com/photo-1528825871115-3581a5387919?&auto=format&fit=crop&w=400&q=60' 
+          url: 'sari.jpg' 
         },
         { 
           type: 'image', 
           url: 'https://images.unsplash.com/photo-1551029506-0807df4e2031?&auto=format&fit=crop&w=400&q=60' 
         },
+          { type: 'video', url: 'sarii.mp4' }
 
       ]
         },
