--- a/index.html
+++ b/index.html
@@ -1218,11 +1218,10 @@
           stock: 30,
           tags: ["drink", "organic", "healthy"], 
          media: [
-    { type: 'image', url: 'sari.jpg' },
-    { type: 'image', url: 'sarii.jepeg' },
-    { type: 'video', url: 'sari-video.mp4' }
+    { type: 'image', url: 'Sari.jpg' },
+    { type: 'image', url: 'sarii.jpeg' },
+    { type: 'video', url: 'sarii.mp4' }
   ]
-
         },
         {
           id: 'p5',
