--- a/index.html
+++ b/index.html
@@ -1229,9 +1229,9 @@
       sellerPhone: "6284564564564",
       img: "https://images.unsplash.com/photo-1528825871115-3581a5387919?&auto=format&fit=crop&w=400&q=60",
       media: [
-        { type: 'image', url: 'https://images.unsplash.com/photo-1528825871115-3581a5387919?&auto=format&fit=crop&w=400&q=60' },
-        { type: 'image', url: 'https://images.unsplash.com/photo-1571902943202-507ec2618e8f?&auto=format&fit=crop&w=400&q=60' },
-        { type: 'video', url: 'https://example.com/videos/sari-drink.mp4' }
+        { type: 'image', url: 'Sari.jpg' },
+        { type: 'image', url: 'sarii.jpeg' },
+        { type: 'video', url: 'sari.mp4' }
       ],
       rating: 4.6,
       reviewCount: 19,
