--- a/index.html
+++ b/index.html
@@ -1152,13 +1152,13 @@
       products: [
         {
           id: 'p1',
-          title: "TOKO YUSUP - Gorengan Homemade",
+          title: "Gorengan Gacor",
           category: "Makanan",
           subcategory: "Snack",
           description: "Berbagai macam gorengan homemade dengan rasa nikmat. Dibuat dengan bahan-bahan segar setiap hari tanpa pengawet.",
-          seller: "Yusup HIMA BISA",
+          seller: "Abdul",
           sellerPhone: "6287772433617",
-          img: "https://images.unsplash.com/photo-1631898035269-d62d9a1d7e1a?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60",
+          img: "Gorengan.jpeg",
           rating: 4.5,
           reviewCount: 28,
           isVerified: true,
