--- a/index.html
+++ b/index.html
@@ -1187,15 +1187,15 @@
         },
         {
           id: 'p2',
-          title: "TOKO RINA - Kue Custom Ulang Tahun",
+          title: "KueLabs", 
           category: "Makanan",
           subcategory: "Kue",
           description: "Pesan kue ulang tahun atau acara spesial sesuai keinginan. Desain custom dengan rasa premium.",
           price: 150000,
           originalPrice: 180000,
-          seller: "Rina HIMA BISA",
+          seller: "Rina",
           sellerPhone: "6281231231231",
-          img: "https://images.unsplash.com/photo-1590080877777-74a852ffe2db?&auto=format&fit=crop&w=400&q=60",
+          img: "ultah.jpeg",
           rating: 4.8,
           reviewCount: 42,
           isVerified: true,
@@ -1204,14 +1204,14 @@
         },
         {
           id: 'p3',
-          title: "TOKO BUDI - Catering Harian Sehat",
+          title: "Catering Harian",
           category: "Makanan",
           subcategory: "Catering",
           description: "Layanan catering harian dengan menu sehat dan lezat. Paket mulai dari 1 minggu hingga 1 bulan.",
           price: 35000,
-          seller: "Budi HIMA BISA",
+          seller: "Budi",
           sellerPhone: "6283213213213",
-          img: "https://images.unsplash.com/photo-1590080877777-74a852ffe2db?&auto=format&fit=crop&w=400&q=60",
+          img: "catering.jpeg",
       rating: 4.3,
       reviewCount: 35,
       stock: 20,
@@ -1225,7 +1225,7 @@
       description: "Minuman sehat organik dengan kemasan menarik. Tanpa pengawet dan 100% alami.",
       price: 15000,
       originalPrice: 20000,
-      seller: "Sari HIMA BISA",
+      seller: "Sari",
       sellerPhone: "6284564564564",
       img: "https://images.unsplash.com/photo-1528825871115-3581a5387919?&auto=format&fit=crop&w=400&q=60",
       media: [
@@ -1240,14 +1240,14 @@
     },
     {
       id: 'p5',
-      title: "TOKO DITO - Laundry Kiloan Premium",
+      title: "Laundry Kiloan Premium",
       category: "Layanan",
       subcategory: "Laundry",
       description: "Laundry kiloan dengan kualitas premium dan antar jemput gratis dalam radius 5km.",
       price: 10000,
-      seller: "Dito HIMA BISA",
+      seller: "Dito",
       sellerPhone: "6287897897897",
-      img: "https://images.unsplash.com/photo-1589985270826-4b7bb135bc9d?&auto=format&fit=crop&w=400&q=60",
+      img: "laundry.jpeg",
       rating: 4.2,
       reviewCount: 31,
       isVerified: true,
@@ -1256,13 +1256,13 @@
     },
     {
       id: 'p6',
-      title: "TOKO LINA - Bunga Segar Custom",
+      title: "Bouquetique",
       category: "Hadiah",
       subcategory: "Bunga",
       description: "Karangan bunga segar custom untuk berbagai acara. Tersedia bunga lokal dan import.",
       price: 120000,
       originalPrice: 150000,
-      seller: "Lina HIMA BISA",
+      seller: "Lina",
       sellerPhone: "6289998887776",
       img: "https://images.unsplash.com/photo-1526047932273-341f2a7631f9?&auto=format&fit=crop&w=400&q=60",
       rating: 4.7,
@@ -1273,12 +1273,12 @@
     },
     {
       id: 'p7',
-      title: "TOKO AGUS - Kaos Custom Sablon",
+      title: "TOKO AGUS - Kaos Sablon",
       category: "Fashion",
       subcategory: "Pakaian",
       description: "Kaos berkualitas dengan sablon custom sesuai permintaan. Bahan katun combed 30s.",
       price: 85000,
-      seller: "Agus HIMA BISA",
+      seller: "Agus",
       sellerPhone: "6286665554443",
       img: "https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?&auto=format&fit=crop&w=400&q=60",
       rating: 4.4,
@@ -1315,9 +1315,9 @@
       description: "Buat website profesional untuk bisnis Anda dengan desain responsive dan fitur lengkap.",
       price: 1500000,
       originalPrice: 2000000,
-      seller: "Fira HIMA BISA",
+      seller: "Caung",
       sellerPhone: "6281112223333",
-      img: "https://images.unsplash.com/photo-1498050108023-c894fdcc538d?&auto=format&fit=crop&w=400&q=60",
+      img: "website.jpeg",
       rating: 4.9,
       reviewCount: 37,
       isVerified: true,
@@ -1330,9 +1330,9 @@
       category: "Editing",
       description: "Editing video profesional untuk konten YouTube, iklan, atau acara spesial Anda.",
       price: 200000,
-      seller: "Gilang HIMA BISA",
+      seller: "Gilang",
       sellerPhone: "6282223334444",
-      img: "https://images.unsplash.com/photo-1504384308090-c894fdcc538d?&auto=format&fit=crop&w=400&q=60",
+      img: "editing.jpeg",
       rating: 4.6,
       reviewCount: 29,
       stock: 10,
@@ -1344,7 +1344,7 @@
       category: "Writer",
       description: "Artikel SEO friendly untuk blog dan website dengan riset keyword profesional.",
       price: 75000,
-      seller: "Hana HIMA BISA",
+      seller: "Hana",
       sellerPhone: "6283334445555",
       img: "https://images.unsplash.com/photo-1455390582262-044cdead277a?&auto=format&fit=crop&w=400&q=60",
       rating: 4.5,
@@ -1360,9 +1360,9 @@
       description: "Desain logo, banner, dan materi promosi lainnya dengan konsep kreatif.",
       price: 150000,
       originalPrice: 200000,
-      seller: "Dewi HIMA BISA",
+      seller: "Dewi",
       sellerPhone: "6284445556666",
-      img: "https://images.unsplash.com/photo-1531497865142-43aa20aa43d6?&auto=format&fit=crop&w=400&q=60",
+      img: "design.jpeg",
       rating: 4.7,
       reviewCount: 21,
       stock: 7,
@@ -1370,11 +1370,11 @@
     },
     {
       id: 'j5',
-      title: "Jasa Fotografi Produk E-commerce",
+      title: "Jasa Photografer Produk",
       category: "Photografer",
       description: "Foto produk profesional untuk e-commerce Anda dengan lighting terbaik.",
       price: 250000,
-      seller: "Edo HIMA BISA",
+      seller: "Edo",
       sellerPhone: "6285556667777",
       img: "https://images.unsplash.com/photo-1519681393784-d120267933ba?&auto=format&fit=crop&w=400&q=60",
       rating: 4.8,
@@ -1389,7 +1389,7 @@
       category: "Writer",
       description: "Penerjemahan dokumen profesional dari Inggris ke Indonesia dan sebaliknya.",
       price: 50000,
-      seller: "Rani HIMA BISA",
+      seller: "Rani",
       sellerPhone: "6287778889990",
       img: "https://images.unsplash.com/photo-1501504905252-473c47e087f8?&auto=format&fit=crop&w=400&q=60",
       rating: 4.3,
@@ -1403,7 +1403,7 @@
       category: "Design",
       description: "Konsultasi dan desain interior rumah dengan konsep modern minimalis.",
       price: 500000,
-      seller: "Adi HIMA BISA",
+      seller: "Adi",
       sellerPhone: "6288889990001",
       img: "https://images.unsplash.com/photo-1616486338812-3dadae4b4ace?&auto=format&fit=crop&w=400&q=60",
       rating: 4.9,
